Fix horizontal margins on mobile

--- a/index.css
+++ b/index.css
@@ -1,7 +1,11 @@
+html {
+  min-width: fit-content;
+}
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  min-width: fit-content;
 }
 .dark {
   background-color: #111;
@@ -100,8 +104,6 @@ input[disabled] {
 
 .area {
   overflow: hidden;
-  margin: 0 -24px;
-  padding: 0 24px;
   -webkit-transition: height .2s;
   -o-transition: height .2s;
   -moz-transition: height .2s;
